--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "style-loader": "^3.2.1",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "date-fns": "^2.23.0"
   }
 }
